<resources>
    <string name="app_name">Phone tools</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="pref_carrier_label_viettel">Viettel</string>
    <string name="pref_carrier_label_vinaphone">Vinaphone</string>
    <string name="pref_carrier_label_mobifone">Mobifone</string>
    <string name="pref_carrier_label_vietnamobile">Vietnamobile</string>
    <string name="pref_carrier_viettel">viettel</string>
    <string name="pref_carrier_vinaphone">vinaphone</string>
    <string name="pref_carrier_mobifone">mobifone</string>
    <string name="pref_carrier_vietnamobile">vietnamobile</string>
    <string name="pref_carriers_label">Nhà mạng</string>
    <string name="pref_carriers_key">carrier</string>
    <string name="title_activity_setting">Cài đặt</string>
    <string name="viewHolderTag">1</string>
    <string name="myWrapperTag">2</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="list_tong_dai">Tổng đài</string>
    <string name="list_3g">Dịch vụ 3G</string>
    <string name="list_tien_ich">Tiện ích</string>
    <string name="list_goi_nhan_tin">Gọi điện, nhắn tin</string>
    <string name="choose_add_item_title">Chọn phương thức</string>
    <string name="choose_preset">Có sẵn</string>
    <string name="choose_custom">Tạo mới</string>
    <string name="new_item_title">Tiêu đề</string>
    <string name="new_item_type">Chọn hành động</string>
    <string name="new_item_type_spinner_item_1">Gọi điện</string>
    <string name="new_item_type_spinner_item_2">Nhắn tin</string>
    <string name="new_item_destination_title">Số đích</string>
    <string name="new_item_text_title">Nội dung SMS</string>
    <string name="add_item_fragment_positive">Thêm</string>
    <string name="add_item_fragment_negative">Hủy</string>
    <string name="main_kiem_tra_tai_khoan_title">Kiểm tra tài khoản</string>
    <string name="main_kiem_tra_button">Kiểm tra</string>
    <string name="main_dich_vu_3g_title">Dịch vụ 3G</string>
    <string name="main_tien_ich_title">Tiện ích</string>
    <string name="main_tuy_chinh_title">Tùy chỉnh</string>
    <string name="main_tuy_chinh_button">Thêm</string>
    <string name="dialog_choose_carrier_title">Chọn nhà mạng</string>
    <string name="menu_settings">Cài đặt</string>
    <string name="service_goi_dien_nhan_tin_title">Tiện ích gọi điện, nhắn tin</string>
    <string name="service_dich_vu_3g_title">Dịch vụ 3G</string>
    <string name="service_tien_ich_khac_title">Tiện ích khác</string>
    <string name="service_activity_title">Dịch vụ</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_service_detail">Dịch vụ</string>
    <string name="service_tabbar_recycle_item_button_dang_ky">Đăng ký</string>
    <string name="service_tabbar_recycle_item_button_huy_dich_vu">Hủy dịch vụ</string>
    <string name="main_item_last_default_item_tuy_chon_title">Tùy chỉnh</string>
    <string name="main_item_last_default_item_them_button">Thêm</string>
    <string name="main_item_action_delete_button_text">Xóa</string>
    <string name="my_preference_item_carrier_title_text">Chọn nhà mạng</string>
    <string name="my_preference_carrier_dialog_title">Chọn nhà mạng</string>
    <string name="service_tabbar_recycle_item_button_kich_hoat">Kích hoạt</string>
    <string name="notification_new_deal_title">Khuyến mãi mới:</string>
    <string name="my_preference_item_carrier_to_noti_title_text">Nhận tin KM thẻ nạp từ</string>
    <string name="dialog_noti_carriers_title">Chọn nhà mạng</string>
</resources>
