<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/main_and_action_item_card"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/main_and_action_item_title"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/main_and_action_item_title_text_view"
            android:layout_weight="1" />


        <Button
            android:id="@+id/item_action"
            style="@style/main_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/main_kiem_tra_button" />
    </LinearLayout>
    <TextView
        android:id="@+id/item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="This is description"
        style="@style/main_item_description"
        android:visibility="gone" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_item_last_default_item_linear_layout"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_item_last_default_item_tuy_chon_title"
            android:layout_weight="1"
            style="@style/Base.TextAppearance.AppCompat.Title"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/main_item_last_default_item_them_button"
            android:id="@+id/main_item_last_default_item_them_button"
            />
    </LinearLayout>



</LinearLayout>